--- a/little-lemon/public/index.html
+++ b/little-lemon/public/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta charset="UTF-8" />
+    <title>Little Lemon</title>
+    <meta name="description" content="Based in Chicago," />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="keywords"
+      content="little, lemon, restaurant, Mediterranean, traditional, recipes"
     />
+    <meta name="author" content="Antony BARGE" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Little Lemon" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/assets/images/logo.svg" />
+    <meta property="og:url" content="https://littlelemon/" />
+    <meta
+      property="og:description"
+      content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
+    />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Little Lemon" />
+
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +37,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
